--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,7 @@
-.App {
+/* .App {
   text-align: center;
-}
+  margin: auto;
+} */
 
 .App-logo {
   height: 40vmin;
@@ -13,7 +14,7 @@
   }
 }
 
-.App-header {
+.App {
   background-color: #282c34;
   min-height: 100vh;
   display: flex;
@@ -27,6 +28,8 @@
 .App-link {
   color: #61dafb;
 }
+
+
 
 @keyframes App-logo-spin {
   from {
